# MiniEngine

./: CMakeLists.txt  README.md
src/core/: Engine.cpp  Engine.h  EntryPoint.cpp  Window.h
src/core/engine/: Engine.cpp  Engine.h  EngineTime.h
src/core/platform/: Window.cpp  Window.h
src/core/platform/Linux/: LinuxWindow.cpp  LinuxWindow.h
src/core/platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
